# VlogAPP

./: README.md  db.sqlite3  pyproject.toml
auth/: serializer.py  tokens.py  urls.py  views.py
auth/migrations/: 0001_initial.py  0002_delete_user.py
main/: admin.py  models.py  serializers.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_remove_vlogs_documents_remove_vlogs_images_and_more.py  0003_alter_vlogs_updated_date.py  0004_rename_documents_documents_document_and_more.py  0005_vlogs_cover_vlogs_tags_like.py  0006_tags_alter_like_unique_together_alter_vlogs_tags.py  0007_remove_vlogs_tags_vlogs_tags.py  0008_remove_comments_likes.py  0009_remove_vlogs_tags_delete_tags.py
vlog/: settings.py  urls.py
